test/sema/typeck/module/enum-with-args-not-accessible.dora
fn f() {
    foo::Foo::A(1i32);
}
mod foo { enum Foo { A(Int32), B } }
